<resources>
    <string name="app_name">神算脈雲</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login_title">登入</string>
    <string name="activity_bpm_title">血壓波量測</string>
    <string name="activity_upload_title">數據上傳</string>
    <string name="activity_cuffreset_title">計數歸零</string>
    <string name="activity_customersn_title">制定序號</string>
    <string name="activity_scanble_title">藍牙掃描</string>
    <string name="activity_bpmprepare_title">量測準備</string>
    <string name="activity_register_title">註冊帳號</string>
    <string name="activity_forgetpass_title">忘記密碼</string>
    <string name="activity_privacy_title">隱私權聲明</string>
    <string name="activity_analysis_title">血壓波分析</string>
    <string name="activity_chooserecords_title">資料類型</string>
    <string name="activity_charthistory_title">歷史圖表</string>
    <string name="activity_barcompare_title">前後比對</string>
    <string name="activity_myrecords_title">血壓波紀錄</string>
    <string name="activity_mygroup_title">我的群組</string>
    <string name="activity_payorder_title">訂單</string>
    <string name="activity_infomation_title">系統公告</string>
    <string name="activity_setting_title">個人設定</string>
    <string name="setting_changepass_title">變更密碼</string>
    <string name="setting_requestpush_title">推播設定</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_menu_online">連線操作</string>
    <string name="name_menu_offline">離線操作</string>
    <string name="name_menu_web">正式DB</string>
    <string name="name_menu_test">測試DB</string>
    <string name="label_maintitlecompany">臺灣益謙</string>
    <string name="label_maintitlename">神算脈雲</string>
    <string name="label_loginclinic">診所</string>
    <string name="label_useraccount">帳號</string>
    <string name="label_userpassword">密碼</string>
    <string name="label_loginrole">角色</string>
    <string name="btn_login">登入</string>
    <string name="inputhint_loginclinic">請輸入您的診所</string>
    <string name="inputhint_loginaccount">請輸入您的帳號</string>
    <string name="check_rememberme">記住我的帳號</string>
    <string name="inputhint_loginpass">請輸入您的密碼</string>
    <string name="role_user">家庭用戶</string>
    <string name="role_admin">機構團體</string>
    <string name="btn_logina">量測登入</string>
    <string name="btn_loginp">我是用戶</string>
    <string name="label_registeraccount">註冊帳號</string>
    <string name="label_forgetpass">忘記密碼</string>
    <string name="dialog_msg_thispagenotready">此系統尚未開放</string>
    <string name="dialog_systemcomment">系統提示</string>
    <string name="dialog_IAgree">我同意</string>
    <string name="dialog_NextTime">下次再說</string>
    <string name="dialog_OK">好</string>
    <string name="dialog_Confirm">確定</string>
    <string name="dialog_Cancel">取消</string>
    <string name="dialog_deletedata">刪除</string>
    <string name="dialog_canceldelete">保留</string>
    <string name="dialog_msg_accountpasserror">帳號密碼錯誤，或是您尚未註冊</string>
    <string name="dialog_msg_clinicaccountpasserror">診所、帳號或密碼輸入錯誤。請修正後再登入</string>
    <string name="dialog_msg_clinicnameerror">診所名稱輸入錯誤，請重新確認後再登入</string>
    <string name="dialog_msg_accountpassempty">診所、帳號及密碼欄位不可以空白</string>
    <string name="dialog_msg_cliniccontainsspace">診所欄位不可以有空格</string>
    <string name="dialog_msg_accountcontainsspace">帳號欄位不可以有空格</string>
    <string name="dialog_msg_passcontainsspace">密碼欄位不可以有空格</string>
    <string name="dialog_msg_unableconnect2server">無法連線至伺服器，請檢查網路連線狀況</string>
    <string name="dialog_msg_fcmtokenunknown">您的設備不支援推播服務，無法取得Token。請關閉APP。</string>
    <string name="toast_welcome">歡迎您</string>
    <string name="label_userpid">身分ID</string>
    <string name="label_userbirthday">生日</string>
    <string name="label_useremail">電子郵件</string>
    <string name="label_usermobile">手機號碼</string>
    <string name="label_usergender">性別</string>
    <string name="label_useravatar">臉部照片</string>
    <string name="inputhint_registeraccount">請設定您的登入帳號</string>
    <string name="inputhint_registerpass">請設定您的登入密碼</string>
    <string name="inputhint_registerpid">請輸入您的身份證字號</string>
    <string name="inputhint_registerbirthday">請輸入您的生日</string>
    <string name="inputhint_registeremail">請輸入您的電子郵件</string>
    <string name="inputhint_registermobile">請輸入您的手機號碼</string>
    <string name="radio_registermale">男性</string>
    <string name="radio_registerfemale">女性</string>
    <string name="btn_ready2register">申請註冊</string>
    <string name="msg_registeraccount_error">帳號格式錯誤，請輸入6 - 30位英文或數字</string>
    <string name="msg_registerpass_error">密碼格式錯誤，請輸入6 - 12位英文或數字</string>
    <string name="msg_registerclinic_error">診所格式錯誤，請輸入2 - 12位中文或英文或數字</string>
    <string name="msg_registerpid_error">身份證字號格式錯誤，必須為大寫英文接續9個數字</string>
    <string name="msg_registerbirthday_error">生日欄位不可以空白</string>
    <string name="msg_registeremail_error">請輸入正確的電子郵件格式</string>
    <string name="msg_registermobile_error">手機號碼格式錯誤，請輸入09開頭接續8位數字。中間請勿空白或其他文字隔開</string>
    <string name="dialog_msg_notsupportbluetooth">您的裝置不支援藍芽功能，系統即將關閉。</string>
    <string name="dialog_msg_notenabledluetooth">沒有開啟藍芽，APP即將關閉。</string>
    <string name="age">歲</string>
    <string name="switch_posture">姿勢</string>
    <string name="switch_sitting">坐姿</string>
    <string name="switch_lie">臥姿</string>
    <string name="switch_position">位置</string>
    <string name="switch_lefthand">左手</string>
    <string name="switch_righthand">右手</string>
    <string name="txt_oxygensaturation">血氧濃度</string>
    <string name="nomeasurenoinput">% （未量測者可不填寫）</string>
    <string name="txt_deviceversion">血壓計版本</string>
    <string name="dialog_msg_oxygenparseIntFail">血氧濃度輸入錯誤</string>
    <string name="label_btdevicename">藍牙設備名稱</string>
    <string name="btn_bleupload">資料上傳</string>
    <string name="btn_bpmstart">開始量測</string>
    <string name="btn_bpmstop">停止量測</string>
    <string name="dialog_msg_notenablebluetooth">您取消開啟藍牙功能，系統將會關閉</string>
    <string name="dialog_msg_nobpmmacbind">您必須要先綁定經脈血壓計，才能開始使用APP</string>
    <string name="unknown_device">設備無法辨識</string>
    <string name="menu_scan">開始掃描</string>
    <string name="menu_stop">停止掃描</string>
    <string name="menu_connect">連接</string>
    <string name="menu_disconnect">中斷</string>
    <string name="title_devices">藍牙裝置</string>
    <string name="unknown_service">無法辨識服務</string>
    <string name="unknown_characteristic">無法辨識特徵</string>
    <string name="connected">已連接</string>
    <string name="disconnected">連線中斷</string>
    <string name="no_data">沒有資料</string>
    <string name="label_device_name">設備名稱</string>
    <string name="label_device_address">設備地址</string>
    <string name="label_device_state">設備狀態</string>
    <string name="label_data">設備資料</string>
    <string-array name="spinner_usergender">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="hello_world">Hello Square World!</string>
    <string name="btn_scanbleon">搜尋藍芽裝置</string>
    <string name="btn_scanbleoff">停止搜尋裝置</string>
    <string name="btn_scanrefresh">重新搜尋</string>
    <string name="dialog_msg_lescanfailed">掃描失敗</string>
    <string name="label_scandevice_list">藍牙掃描列表</string>
    <string name="dialog_msg_nobledevicediscovered">系統掃描不到藍芽血壓計，請確認藍芽血壓計的電源開啟之後再重新掃描一次。</string>
    <string name="dialog_msg_nobinddevicediscovered">系統掃描不到綁定的藍芽血壓計，請確認綁定的藍芽血壓計電源開啟之後再重新掃描一次。</string>
    <string name="dialog_msg_notsuportbpmdevice">您選取的藍牙裝置並不支援血壓波量測功能，請重新選取。</string>
    <string name="label_bloodpressure">血壓</string>
    <string name="label_heartbeatrate">心率</string>
    <string name="label_chartmode">能量類型</string>
    <string name="label_sbp">收縮壓</string>
    <string name="label_dbp">舒張壓</string>
    <string name="label_hr">心率</string>
    <string name="label_ihb">心率不整</string>
    <string name="label_bpunit">mmHg</string>
    <string name="label_hrunit">每分鐘</string>
    <string name="btn_bpmavatar">拍照</string>
    <string name="label_pidforgroup">身分證字號</string>
    <string name="hint_pidforgroup">加入群組會員的身分證字號</string>
    <string name="label_mobileforgroup">手機號碼</string>
    <string name="hint_mobileforgroup">0912345678</string>
    <string name="label_emailforgroup">Email</string>
    <string name="label_idforgroup">群組名稱</string>
    <string name="label_listforgroup">群組列表</string>
    <string name="btn_addgroupmember">加入群組</string>
    <string name="btn_viewgroupmember">檢視群組</string>
    <string name="dialog_msg_pidforgroupfail">請確認身分證字號正確或是在診所有初診紀錄</string>
    <string name="dialog_msg_pidforgroupempty">請輸入要加入群組會員的身分證字號、手機號碼及Email</string>
    <string name="dialog_msg_mygroupnoauthorization">您沒有使用【我的群組】的權限</string>
    <string name="dialog_msg_nobpmclinic">系統沒有找到提供經脈血壓計的診所</string>
    <string name="dialog_msg_groupmemberexceeds">您的群組人數已經達到上限的五人</string>
    <string name="btn_requestpass">申請新密碼</string>
    <string name="label_forgetclinic">診所</string>
    <string name="label_forgetaccount">帳號</string>
    <string name="label_forgetmobile">手機末五碼</string>
    <string name="label_forgetpid">身分證末五碼</string>
    <string name="label_forgetbirthday">生日日期共四碼</string>
    <string name="label_forgetbirthday_hint">如三月九日請輸入0309</string>
    <string name="label_forgetrank">兄弟姊妹中的排行</string>
    <string name="label_forgetrank_hint">如 1 = 老大，2 = 老二，以此類推</string>
    <string name="label_forgetfloor">居住的樓層數字</string>
    <string name="label_forgetfloor_hint">如 1 = 一樓，2 = 二樓，以此類推</string>
    <string name="msg_forgetpid_error">請輸入身分證號末五碼</string>
    <string name="msg_forgetbirthday_error">請輸入生日日期四碼數字</string>
    <string name="msg_forgetmobile_error">請輸入手機末五碼數字</string>
    <string name="msg_forgetrank_error">請輸入兄弟姊妹排行數字</string>
    <string name="msg_forgetfloor_error">請輸入居住樓層數字</string>
    <string name="activity_mainfunction_title">主功能頁</string>
    <string name="check_privacyagree">我同意已閱讀且已充分瞭解此使用條款內容並願意使用本服務</string>
    <string name="clicktotakepicture">輕按以開啟拍照功能</string>
    <string name="btn_blestopmeasure">停止量測</string>
    <string name="btn_blestartmeasure">開始量測</string>
    <string name="dialog_msg_forgetpassask">如果您申請新密碼，原有的密碼將會失效無法再使用。您確定要繼續申請新密碼？</string>
    <string name="dialog_msg_checkHasAccount">如果您曾經註冊或是已經有診所帳號，請勿再重複註冊。</string>
    <string name="dialog_gotoregister">前往註冊</string>
    <string name="dialog_goforgetpass">申請新密碼</string>
    <string name="dialog_abordforgetpass">取消申請</string>
    <string name="label_forgetdescription">請輸入以下的內容。如果您申請帳號時未設定家中排行與樓層，此項目請保留空白</string>
    <string name="label_bpmanalysischart">血壓波分析圖</string>
    <string name="label_bpmanalysisreport">血壓量測穩定性</string>
    <string name="name_meridiancode">諧波</string>
    <string name="name_energydensity">能量密度</string>
    <string name="name_energyvariance">變異率</string>
    <string name="name_measuretime">量測時間：</string>
    <string name="name_recordrange3month">三個月</string>
    <string name="name_recordrange12month">一年</string>
    <string name="name_recordrange">選取範圍</string>
    <string name="amplitudes">能量</string>
    <string name="label_username">姓名</string>
    <string name="inputhint_registername">請輸入您的姓名</string>
    <string name="label_password00">目前的密碼</string>
    <string name="label_password10">新的密碼</string>
    <string name="inputhint_password00">請輸入目前使用的密碼</string>
    <string name="inputhint_password10">請輸入要變更的新密碼</string>
    <string name="inputhint_password11">請再次輸入新密碼</string>
    <string name="btn_confrimchangepass">密碼變更</string>
    <string name="label_alarmtitle">鬧鐘名稱</string>
    <string name="inputhint_alarmtitle">請輸入鬧鐘的名稱</string>
    <string name="input_alarmtitle">血壓波量測提醒</string>
    <string name="btn_confirmalarm">鬧鐘確定</string>
    <string name="label_alarmtime">提醒時間</string>
    <string name="label_registerclinic">診所</string>
</resources>