<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting_Alarm">

    <TextView
        android:id="@+id/label_alarmtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/label_alarmtitle"
        android:textSize="@dimen/labeltextsize"
        android:textAlignment="textStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_alarmtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/inputhint_alarmtitle"
        android:text="@string/input_alarmtitle"
        android:textAlignment="textStart"
        android:importantForAutofill="no"
        android:inputType = "textPersonName"
        app:layout_constraintTop_toBottomOf="@id/label_alarmtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_alarmtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/label_alarmtime"
        android:textSize="@dimen/labeltextsize"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/input_alarmtitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_alarmtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="time"
        android:textAlignment="textStart"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/label_alarmtime"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_confirmalarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_shape_loginasp"
        android:text="@string/btn_confirmalarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>